# improvie

./: .editorconfig  .gitignore  .markdownlint.yaml  .prettierignore  .prettierrc  .typos.toml  ARCHITECTURE.md  CONTRIBUTING-JA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README-JA.md  README.md  TODO.md  add_component.sh  deno.json  eslint.config.js  package-lock.json  package.json  rust-toolchain.toml  svelte.config.js  tailwind.config.ts  tsconfig.json  vcpkg.json  vite.config.js
.github/: .markdownlint.yaml  PULL_REQUEST_TEMPLATE.md
scripts/: bind_ts.sh  update_version.sh
src-tauri/: .gitignore  Cargo.toml  build.rs  deny.toml  seaorm.sh  tauri.conf.json  tauri.ios.conf.json
src-tauri/.cargo/: config.toml
src-tauri/addtional/bind/: Cargo.toml
src-tauri/addtional/bind/src/: lib.rs
src-tauri/addtional/bind/tests/: mod.rs
src-tauri/addtional/improvie-builtin/: Cargo.toml
src-tauri/addtional/improvie-builtin/src/: lib.rs
src-tauri/addtional/improvie-builtin/src/themes/: black.rs  catppuccin.rs  tokyonight.rs  white.rs
src-tauri/addtional/improvie-plugin/: Cargo.toml
src-tauri/addtional/improvie-plugin/src/: context.rs  error.rs  lib.rs  manager.rs  metadata.rs
src-tauri/addtional/improvie-plugin/src/features/: mod.rs  rule.rs
src-tauri/addtional/integration/youtube/: Cargo.toml
src-tauri/addtional/integration/youtube/src/: lib.rs
src-tauri/addtional/ts-bind/: Cargo.toml
src-tauri/addtional/ts-bind/src/: lib.rs
src-tauri/addtional/ts-bind/tests/: mod.rs
src-tauri/addtional/uid/: Cargo.toml
src-tauri/addtional/uid/src/: lib.rs
src-tauri/addtional/youtube/: Cargo.toml
src-tauri/addtional/youtube/src/: error.rs  ffmpeg.rs  lib.rs  model.rs  yt.rs
src-tauri/addtional/youtube/src/download/: audio.rs  mod.rs  stream.rs  thumbnail.rs  video.rs
src-tauri/capabilities/: default.json
src-tauri/external_crate/uid/: Cargo.toml
src-tauri/external_crate/uid/src/: lib.rs
src-tauri/external_crate/uuid/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/improvie-app/: Cargo.toml
src-tauri/improvie-app/src/: lib.rs  modules.rs  state.rs
src-tauri/improvie-app/src/command/: items.rs  mod.rs  playlists.rs
src-tauri/improvie-app/src/command/dialog/: file.rs
src-tauri/improvie-app/src/model/: content.rs  dialog.rs  items.rs  mod.rs  plays.rs
src-tauri/improvie-app/src/usecase/: halth_check.rs  health_check.rs  items.rs  mod.rs  playlists.rs  plays.rs  recents.rs  rules.rs  settings.rs
src-tauri/improvie-builtin/: Cargo.toml
src-tauri/improvie-builtin/src/: lib.rs
src-tauri/improvie-builtin/src/themes/: black.rs  catppuccin.rs  mod.rs  tokyonight.rs  white.rs
src-tauri/improvie-command/: Cargo.toml
src-tauri/improvie-command/src/: lib.rs  modules.rs  state.rs
src-tauri/improvie-command/src/command/: health_check.rs  integration.rs  items.rs  mod.rs  playlists.rs  plays.rs  plugin.rs  recents.rs  rules.rs  settings.rs  youtube.rs
src-tauri/improvie-command/src/command/dialog/: file.rs  folder.rs  mod.rs
src-tauri/improvie-command/src/error/: mod.rs  yt.rs
src-tauri/improvie-command/src/model/: dialog.rs  items.rs  mod.rs  yt.rs
src-tauri/improvie-command/src/model/rules/: folder.rs  loop_rule.rs  mod.rs  random.rs
src-tauri/improvie-domain/: Cargo.toml
src-tauri/improvie-domain/src/: lib.rs  modules.rs
src-tauri/improvie-domain/src/model/: health_check.rs  items.rs  mod.rs  plays.rs  rules.rs
src-tauri/improvie-domain/src/persistence/: db.rs
src-tauri/improvie-domain/src/repository/: health_check.rs  items.rs  mod.rs  playlists.rs  plays.rs  recents.rs  rules.rs  settings.rs
src-tauri/improvie-infra/: Cargo.toml
src-tauri/improvie-infra/row/: Cargo.toml
src-tauri/improvie-infra/row/src/: app_settings.rs  contents.rs  favorite_playlists.rs  folders.rs  hierarchical_items.rs  hierarchical_play_items.rs  items.rs  lib.rs  play_folders.rs  play_items.rs  playlists.rs  recent_contents.rs  recent_playlists.rs
src-tauri/improvie-infra/src/: error.rs  lib.rs  macros.rs  modules.rs
src-tauri/improvie-infra/src/model/: health_check.rs  items.rs  mod.rs  playlists.rs  plays.rs
src-tauri/improvie-infra/src/persistence/: db.rs
src-tauri/improvie-infra/src/repository/: health_check.rs  items.rs  mod.rs  playlists.rs  plays.rs  recents.rs  rules.rs  settings.rs
src-tauri/improvie-infra/src/repository/fixtures/: .sqlfluff  get_items_hierarchy.sql
src-tauri/improvie-infra/tests/items/: get_content_by_id.rs  get_folder_by_id.rs  mod.rs  update_item_name.rs
src-tauri/improvie-infra/tests/plays/: mod.rs
src-tauri/improvie-infra/tests/rules/: mod.rs
src-tauri/improvie-infra/tests/settings/: mod.rs
src-tauri/improvie-logic/: Cargo.toml
src-tauri/improvie-logic/src/: error.rs  lib.rs  uuid.rs
src-tauri/improvie-logic/src/constant/: content.rs  items.rs  macros.rs  mod.rs  plays.rs
src-tauri/improvie-logic/src/constants/: content.rs  mod.rs
src-tauri/improvie-logic/src/error/: rules.rs
src-tauri/improvie-logic/src/logic/: content.rs  mod.rs  playlist.rs  rule.rs
src-tauri/improvie-logic/src/logics/: content.rs  mod.rs  playlist.rs  rule.rs
src-tauri/improvie-logic/src/model/: items.rs  mod.rs  playlist.rs  plays.rs  settings.rs  utils.rs
src-tauri/improvie-logic/src/util/: mod.rs
src-tauri/improvie-plugin/: Cargo.toml
src-tauri/improvie-plugin/src/: context.rs  lib.rs  macros.rs  manager.rs  metadata.rs
src-tauri/improvie-plugin/src/features/: mod.rs  theme.rs
src-tauri/improvie-shared/: Cargo.toml
src-tauri/improvie-shared/src/: error.rs
src-tauri/integration/youtube/: Cargo.toml
src-tauri/integration/youtube/src/: lib.rs
src-tauri/migrations/: .sqlfluff  0001_base.sql  0002_items.sql  0003_playlits.sql  0004_recent.sql  0005_up_recent.sql
src-tauri/prebuild/: Cargo.toml
src-tauri/prebuild/src/: main.rs
src-tauri/src/: handler.rs  lib.rs  macros.rs  main.rs  modules.rs
src-tauri/src/bindings/: Uid.ts
src-tauri/src/command/: content.rs  health_check.rs  items.rs  mod.rs  playlists.rs
src-tauri/src/init/: log.rs  mod.rs
src-tauri/src/state/: modules.rs
(+185 files in other folders)
