[package]
name = "improvie"
description = "This is a tauri app that improves movie(video) management."
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
default = []
dev = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "improvie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0", features = [] }

[dependencies]
improvie-command.workspace = true

serde.workspace = true
serde_json.workspace = true
log.workspace = true

tauri.workspace = true
tauri-plugin-dialog.workspace = true

# tauri plugin and config
tauri-plugin-opener = "=2.2.5"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-log = "=2.2.1"
