[package]
name = "improvie"
description = "A Tauri app to 'improve like the movie' — helping you organize local media and create playlists easily."
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "improvie_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
run-test = ["ts"]
ts = ["improvie-command/ts"]
static = ["youtube/static"]

[build-dependencies]
tauri-build = { version = "=2.2", features = [] }

[dependencies]
improvie-command.workspace = true
improvie-plugin.workspace = true
improvie-logic.workspace = true
youtube.workspace = true

serde.workspace = true
serde_json.workspace = true
log.workspace = true

tauri.workspace = true
tauri-plugin-dialog.workspace = true

# tauri plugin and config
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-log = "=2.4.0"

[patch.crates-io]
ffmpeg-sys-next = { git = "https://github.com/moriyoshi-kasuga/rust-ffmpeg-sys.git", branch = "master" }

[workspace]
members = [
  ".",
  "improvie-infra",
  "improvie-domain",
  "improvie-command",
  "improvie-logic",
  "improvie-app",
  "addtional/improvie-plugin",
  "addtional/improvie-builtin",
  "addtional/uid",
  "addtional/bind",
  "addtional/youtube",
  "prebuild",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["moriyoshi-kasuga"]
repository = "https://github.com/improvie/improvie"
description = "This is a tauri app that improves movie(video) management."

[workspace.dependencies]
improvie-app = { path = "improvie-app" }
improvie-infra = { path = "improvie-infra" }
improvie-domain = { path = "improvie-domain" }
improvie-logic = { path = "improvie-logic" }
improvie-command = { path = "improvie-command" }

# addtional
improvie-plugin = { path = "addtional/improvie-plugin" }
improvie-builtin = { path = "addtional/improvie-builtin" }
uid = { path = "addtional/uid" }
youtube = { path = "addtional/youtube" }
bind = { path = "addtional/bind" }

# tauri
tauri = { version = "=2.5.1", features = [
  "protocol-asset",
  "macos-private-api",
] }
tauri-plugin-dialog = "=2.2.1"

# async/concurrency/parallelism
tokio = { version = "=1.45.0", features = ["full"] }
async-trait = "=0.1"
reqwest = { version = "=0.12.15", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
] }
futures-util = "=0.3.31"

# ser/de
serde = { version = "=1.0", features = ["derive"] }
serde_json = "=1.0"

# utils
thiserror = "=2.0"
chrono = { version = "=0.4.41", features = ["serde"] }
rand = "=0.9.1"
ts-rs = { version = "=10.1.0", features = ["uuid-impl", "chrono-impl"] }
more-convert = { version = "=0.11.1", features = ["utils"] }

# macros
proc-macro2 = "=1.0"
quote = "=1.0"
syn = "=2.0"
seq-macro = "=0.3.6"

# others
log = "=0.4.27"
sqlx = { version = "=0.8.5", features = [
  "sqlite",
  "tls-rustls",
  "runtime-tokio",
  "chrono",
] }

[workspace.lints.rust]
nonstandard_style = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
print_stderr = "deny"

needless_continue = "warn"
needless_for_each = "warn"
needless_raw_string_hashes = "warn"
needless_raw_strings = "warn"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
