[package]
name = "improvie-app"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ts = ["uid/ts", "improvie-logic/ts", "dep:bind", "dep:ts-rs"]

[dependencies]
improvie-domain.workspace = true
improvie-logic.workspace = true
uid.workspace = true

serde.workspace = true
chrono.workspace = true
serde_json.workspace = true
log.workspace = true
more-convert.workspace = true
thiserror.workspace = true
bind = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }

[lints]
workspace = true
