[package]
name = "improvie-command"
version = "0.1.0"
edition = "2024"

[dependencies]
improvie-domain.workspace = true
improvie-logic.workspace = true
improvie-infra.workspace = true
improvie-app.workspace = true

improvie-plugin.workspace = true
improvie-builtin.workspace = true
uid.workspace = true
youtube.workspace = true

tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tauri.workspace = true
serde.workspace = true
log.workspace = true
tauri-plugin-dialog.workspace = true
more-convert.workspace = true
ts-rs = { workspace = true, optional = true }
bind = { workspace = true, optional = true }

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }

[features]
default = []
ts = [
  "dep:bind",
  "dep:ts-rs",
  "improvie-logic/ts",
  "improvie-app/ts",
  "youtube/ts",
  "uid/ts",
]

[lints]
workspace = true
