[package]
name = "improvie-command"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
improvie-domain.workspace = true
improvie-logic.workspace = true
improvie-infra.workspace = true
improvie-app.workspace = true

uid.workspace = true
youtube.workspace = true

tauri.workspace = true
tauri-plugin-dialog.workspace = true

tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
log.workspace = true
more-convert.workspace = true
async-trait.workspace = true

ts-rs = { workspace = true, optional = true }
bind = { workspace = true, optional = true }

[dev-dependencies]
tauri = { workspace = true, features = ["test"] }

[features]
default = []
ts = [
  "dep:bind",
  "dep:ts-rs",
  "improvie-logic/ts",
  "improvie-app/ts",
  "youtube/ts",
  "uid/ts",
]

[lints]
workspace = true
