[package]
name = "improvie-domain"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
improvie-logic.workspace = true
uid.workspace = true

thiserror.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
