[package]
name = "improvie-infra"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
improvie-domain.workspace = true
improvie-logic.workspace = true
uid.workspace = true

async-trait.workspace = true
thiserror.workspace = true
sqlx.workspace = true
log.workspace = true
chrono.workspace = true
more-convert.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
