[package]
name = "improvie-infra"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
improvie-domain.workspace = true
improvie-logic = { workspace = true, features = ["db"] }
uid = { workspace = true, features = ["db"] }

async-trait.workspace = true
thiserror.workspace = true
sqlx.workspace = true
log.workspace = true
chrono.workspace = true
more-convert.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
