[package]
name = "improvie-infra"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
test = []

[dependencies]
improvie-domain.workspace = true
improvie-logic = { workspace = true, features = ["db"] }
improvie-row.workspace = true
uid = { workspace = true, features = ["db"] }

async-trait.workspace = true
thiserror.workspace = true
sqlx.workspace = true
sea-orm.workspace = true
log.workspace = true
chrono.workspace = true
more-convert.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
improvie-infra = { workspace = true, features = ["test"] }

[lints]
workspace = true
