[package]
name = "improvie-logic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ts = ["uid/ts", "dep:bind", "dep:ts-rs"]
db = ["dep:sqlx", "dep:sea-orm"]

[dependencies]
uid.workspace = true

thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
more-convert.workspace = true
bind = { workspace = true, optional = true }
ts-rs = { workspace = true, optional = true }

sea-orm = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }

[lints]
workspace = true
