[package]
name = "uid"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ts = ["dep:bind", "dep:ts-rs"]
db = ["sqlx", "sea-orm"]

[dependencies]
uuid = { version = "=1.17.0", features = [
  "v7",
  "fast-rng",
  "macro-diagnostics",
  "serde",
] }
sqlx = { workspace = true, features = ["uuid"], optional = true }
sea-orm = { workspace = true, features = ["with-uuid"], optional = true }
serde.workspace = true
ts-rs = { workspace = true, optional = true }
bind = { workspace = true, optional = true }
