[package]
name = "uid"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ts = ["dep:bind", "dep:ts-rs"]
db = ["sea-orm"]

[dependencies]
ulid = "=1.2.1"
sea-orm = { workspace = true, optional = true }
serde.workspace = true
ts-rs = { workspace = true, optional = true }
bind = { workspace = true, optional = true }
