[package]
name = "youtube"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[features]
default = []
ts = ["dep:ts-bind", "dep:ts-rs"]
static-ffmpeg = ["ez-ffmpeg/static"]

[dependencies]
tokio.workspace = true
serde.workspace = true
improvie-logic.workspace = true
reqwest.workspace = true
thiserror.workspace = true
log.workspace = true
futures-util.workspace = true
more-convert.workspace = true

ts-rs = { workspace = true, optional = true }
ts-bind = { workspace = true, optional = true }

ez-ffmpeg = { features = [
  "async",
], git = "https://github.com/moriyoshi-kasuga/ez-ffmpeg.git" }
rusty_ytdl = { version = "=0.7.4", git = "https://github.com/moriyoshi-kasuga/rusty_ytdl", default-features = false, features = [
  "rustls-tls",
  "search",
] }

[lints]
workspace = true
