[package]
name = "youtube"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
ts = ["dep:bind", "dep:ts-rs"]
static = ["include", "ez-ffmpeg/static"]
include = ["dep:ez-ffmpeg"]

[dependencies]
tokio.workspace = true
serde.workspace = true
reqwest.workspace = true
thiserror.workspace = true
log.workspace = true
bytes.workspace = true

ts-rs = { workspace = true, optional = true }
bind = { workspace = true, optional = true }

ez-ffmpeg = { version = "=0.5.3", features = ["async"], optional = true }

[lints]
workspace = true
