[package]
name = "improvie-row"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
improvie-logic.workspace = true

uid.workspace = true
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true

[lints]
workspace = true
