[package]
name = "improvie-yt"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
log.workspace = true
serde.workspace = true

yt-dlp = { version = "=1.3.3", default-features = false, git = "https://github.com/moriyoshi-kasuga/yt-dlp.git", features = [
    "rustls",
] }
